kubernetes/service.yaml
# kind: Service
# apiVersion: v1
# metadata:
#   labels:
#     app: web-profile
#   name: web-profile
#   namespace: web-profile
# spec:
#   # type: LoadBalancer
#   selector:
#     app: web-profile
#   ports:
#     - name: http
#       protocol: TCP
#       port: 80
#       targetPort: 80
#     # - name: https
#     #   protocol: TCP
#     #   port: 443
#     #   targetPort: 80

# # ---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-profile
  name: web-profile
  namespace: _{_NAMESPACE_}_
spec:
  ports:
  - port: 80
    name: http
    #protocol: TCP
    targetPort: 80
  selector:
    app: web-profile
#   type: LoadBalancer
