kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-profile
  namespace: _{_NAMESPACE_}_
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - _{_DNS_HOST_}_
    secretName: letsencrypt-prod
  rules:
  - host: _{_DNS_HOST_}_
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: web-profile
              port:
                number: 80
